--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,10 +1,10 @@
-* {
-  margin: 0;
-  padding: 0;
-}
+@import 'tailwindcss';
+@source "../views";
 
-html,
-body {
-  height: 100%;
-  width: 100%;
+@theme {
+  --color-white-background: #f9f9fc;
+  --color-primary: #4e4e54;
+  --color-secondary: #9e9ecf;
+  --color-accent: #aec775;
+  --color-text: #0a0a0d;
 }
