added fonts and stylesheet

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,43 @@
+@font-face {
+  font-family: 'Roboto';
+  src:
+    url('/public/fonts/Roboto-Bold.woff2') format('woff2'),
+    url('/public/fonts/Roboto-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src:
+    url('/public/fonts/Roboto-Regular.woff2') format('woff2'),
+    url('/public/fonts/Roboto-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Orbitron';
+  src:
+    url('/public/fonts/Orbitron-Bold.woff2') format('woff2'),
+    url('/public/fonts/Orbitron-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Orbitron';
+  src:
+    url('/public/fonts/Orbitron-Regular.woff2') format('woff2'),
+    url('/public//fonts/Orbitron-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 @import 'tailwindcss';
 @source "../views";
 
@@ -14,5 +54,5 @@
   --color-btn-background-secondary: #9e9ecf;
   --color-btn-background-accent: #0a0a0d;
 
-  --color-border: #0a0a0d;
+  --color-border-color: #0a0a0d;
 }
