--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -8,5 +8,9 @@
     <h1 class="text-3xl font-bold underline">
       Hello world!
     </h1>
+
+    <button
+      class=" px-10 py-2 bg-btn-background-primary text-btn-text-white border-2 border-border-color font-bold"
+    >Hello</button>
   </body>
 </html>
