--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -55,4 +55,24 @@
   --color-btn-background-accent: #0a0a0d;
 
   --color-border-color: #0a0a0d;
+  --font-orbitron: 'Orbitron', 'Roboto';
+  --font-orbitron--font-feature-settings: 'cv02', 'cv03', 'cv04', 'cv11';
+  --font-orbitron--font-variation-settings: 'opsz' 32;
+}
+
+body {
+  font-family:
+    'Roboto',
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Open Sans',
+    'Helvetica Neue',
+    sans-serif;
+  font-size: 18px;
 }
