created the authentication controller

--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -10,7 +10,7 @@
     </h1>
 
     <button
-      class=" px-10 py-2 bg-btn-background-primary text-btn-text-white border-2 border-border-color font-bold font-orbitron"
+      class=" px-10 py-2 bg-btn-background-primary text-btn-text-white border-2 border-border-color tracking-widest font-orbitron"
     >Hello</button>
   </body>
 </html>
