--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -1,16 +1,11 @@
-<!doctype html><html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    @vite(['resources/css/app.css', 'resources/js/app.js'])
-  </head>
-  <body>
-    <h1 class="text-3xl font-bold underline">
-      Hello world!
+@layout.app({ title: "Home" })
+  @slot('meta')
+    <meta name="description" content="Welcome to the expense tracker" />
+  @endslot
+  
+  @slot('main')
+    <h1 class="text-text-clr underline">
+      Hello world
     </h1>
-
-    <button
-      class=" px-10 py-2 bg-btn-background-primary text-btn-text-white border-2 border-border-color tracking-widest font-orbitron"
-    >Hello</button>
-  </body>
-</html>
+  @endslot
+@end
