added signin controller and associated pages

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -54,6 +54,8 @@
   --color-btn-background-secondary: #9e9ecf;
   --color-btn-background-accent: #0a0a0d;
 
+  --color-label-clr: #4e4e54;
+
   --color-border-color: #0a0a0d;
   --font-orbitron: 'Orbitron', 'Roboto';
   --font-orbitron--font-feature-settings: 'cv02', 'cv03', 'cv04', 'cv11';
