--- a/resources/views/auth/signin.edge
+++ b/resources/views/auth/signin.edge
@@ -8,8 +8,11 @@
       <section
         class="flex items-start justify-start h-8 border-2 border-border-color w-fit  mt-[10%] hover:scale-105 transition duration-200 delay-75 hover:shadow-[5px_5px_0px_5px_#00000024]"
       >
-        <a href="#" class="px-10 border-r-2 border-r-border-color h-full">Signup</a>
-        <a href="#" class="bg-btn-background-primary text-btn-text-white px-10 h-full">Signin</a>
+        <a
+          href="#"
+          class=" bg-btn-background-primary text-btn-text-white  px-10  border-r-2 border-r-border-color h-full"
+        >Signup</a>
+        <a href="#" class="px-10 h-full">Signin</a>
       </section>
 
       <form action="" method="post" class="mt-4 " autocomplete="off" aria-autocomplete="none">
